Revision 84 	 2010-10-27 	 removing version number of gdata from requirements as it is causing errors 
Revision 83 	 2010-10-27 	 Deployment related cleanup 
Revision 82 	 2010-10-21 	 Upgrading latest versions of requirements 
Revision 81 	 2010-10-21 	 Changes to requirements 
Revision 80 	 2010-10-19 	 Initialized Ditz bug database 
Revision 79 	 2010-10-19 	 Refactored some config stuff 
Revision 78 	 2010-09-15 	 Prettifying Student profile listing pages 
Revision 77 	 2010-09-09 	 Warning when navigating away from unsaved edit form 
Revision 76 	 2010-09-05 	 Cleanup of fabfile.py 
Revision 75 	 2010-09-05 	 Changing homepage for logged-in users 
Revision 74 	 2010-09-05 	 Changing theme of docs to natures as readthedocs.org does not support custom themes 
Revision 73 	 2010-09-04 	 Small change to docs 
Revision 72 	 2010-09-04 	 Using ADCtheme for documentation 
Revision 71 	 2010-08-30 	 Renaming README to README.rst 
Revision 70 	 2010-08-24 	 Chaging URL in main menu 
Revision 69 	 2010-08-24 	 Logout now logs out of Google Apps also 
Revision 68 	 2010-08-24 	 Small change to main menu 
Revision 67 	 2010-08-23 	 Password reset confirm form 
Revision 66 	 2010-08-23 	 Removing forcePasswordChange as it is not working 
Revision 65 	 2010-08-23 	 Removing forcePasswordChange as it is not working 
Revision 64 	 2010-08-23 	 small testing related changes 
Revision 63 	 2010-08-23 	 Small changes to password reset 
Revision 62 	 2010-08-22 	 Small change to testing 
Revision 61 	 2010-08-22 	 Added testcases for password reset and greetings 
Revision 60 	 2010-08-22 	 Greetings on Birthdays. Not tested 
Revision 59 	 2010-08-22 	 Added Password Reset. Not tested 
Revision 58 	 2010-08-22 	 Testing related changes 
Revision 57 	 2010-08-17 	 Google Apps related changes. Tested 
Revision 56 	 2010-08-16 	 Small cosmetic changes 
Revision 55 	 2010-08-16 	 Customizing Admin Dashboard 
Revision 54 	 2010-08-16 	 To Activate/Deactivate accounts in Google 